welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:2: error: ')' expected but '<-' found.
	if   ( ( a<-13 to 19 ) ||  ( b<-13 to 19 )) {
                  ^teenSum:6: error: ')' expected but '}' found.
}
^